# detect

./: build.sh  db.sqlite3  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
base/: forms.py  models.py  urls.py  utils.py  views.py
base/migrations/: 0001_initial.py  0002_uploadedfile.py  0003_delete_item.py  0004_item.py
base/templates/: success.html  upload.html
human/: asgi.py  settings.py  urls.py  wsgi.py
