[tool.poetry]
name = "human"
version = "1.0"
description = "This application detect human faces in pictures"
authors = ["Favour Oghenekowho"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "1.25.2"
asgiref="3.7.2"
certifi="2023.7.22"
distlib="0.3.7"
Django="4.2.4"
djangorestframework="3.14.0"
filelock="3.12.3"
opencv-python="4.8.0.76"
Pillow="10.0.0"
pipenv="2023.9.1"
platformdirs="3.10.0"
pytz="2023.3"
sqlparse="0.4.4"
tzdata="2023.3"
virtualenv="20.24.4"
gunicorn="21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}


